fix: add missing background color on sidebar tabs

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -9,6 +9,7 @@
         font-size: 16px;
         margin: 0;
         border: unset;
+        background: $color-5;
         .collapse {
             background: $color-5;
             color: $color-4;
